--- a/SistemaTesis/Views/Account/AccessDenied.cshtml
+++ b/SistemaTesis/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Acceso denegado";
 }
 
 <header>
     <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <p class="text-danger">Usted no tiene permisos para acceder a esta opción.</p>
 </header>
