--- a/SistemaTesis/Views/Home/Index.cshtml
+++ b/SistemaTesis/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Sistema Evaluación de Asentamientos Informales";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
