--- a/SistemaTesis/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/SistemaTesis/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,6 +1,6 @@
 @model TwoFactorAuthenticationViewModel
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "Autentificacion de doble factor";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
 }
 
@@ -33,7 +33,7 @@
     <a asp-action="GenerateRecoveryCodesWarning" class="btn btn-default">Reset recovery codes</a>
 }
 
-<h5>Authenticator app</h5>
+<h5>App de autenticaci&oacute;n</h5>
 @if (!Model.HasAuthenticator)
 {
     <a asp-action="EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
