--- a/SistemaTesis/Views/Shared/_Layout.cshtml
+++ b/SistemaTesis/Views/Shared/_Layout.cshtml
@@ -33,12 +33,21 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Acerca de</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Formulario</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu">   
+                            <li><a asp-area="" asp-controller="Cantones" asp-action="Index">Cantones</a></li>
+                            <li><a asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a></li>
                             <li><a asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Amenazas" asp-action="Index">Reporte 1</a></li>
+                        </ul>
+                    </li>                    
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -55,6 +64,8 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/Provincias.js" asp-append-version="true"></script>
+        <script src="~/js/Cantones.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
