--- a/SistemaTesis/Views/Cantones/Index.cshtml
+++ b/SistemaTesis/Views/Cantones/Index.cshtml
@@ -83,5 +83,19 @@
 </div>
 
 <!--Modal Estado-->
-
-
+<div class="modal fade" id="ModalEstadoCanton" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Actualizar estado</h4>
+            </div>
+            <div class="modal-body">
+                <h3 id="titleCurso" class="modal-title"></h3>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                <button type="button" onclick="editarEstadoCanton()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
