--- a/SistemaTesis/Views/Shared/_Layout.cshtml
+++ b/SistemaTesis/Views/Shared/_Layout.cshtml
@@ -36,8 +36,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Formulario</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración<b class="caret"></b></a>
-                        <ul class="dropdown-menu">   
+                        <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="Cantones" asp-action="Index">Cantones</a></li>
+                            <li><a asp-area="" asp-controller="Distritos" asp-action="Index">Distritos</a></li>
                             <li><a asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a></li>
                             <li><a asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a></li>
                         </ul>
@@ -66,6 +67,7 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/Provincias.js" asp-append-version="true"></script>
         <script src="~/js/Cantones.js" asp-append-version="true"></script>
+        <script src="~/js/Distritos.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
