--- a/SistemaTesis/Views/Distritos/Index.cshtml
+++ b/SistemaTesis/Views/Distritos/Index.cshtml
@@ -41,7 +41,7 @@
 
 </div>
 
-<!--Modal Agregar Canton-->
+<!--Modal Agregar Distrito-->
 <div class="modal fade" id="modalDistritos" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -67,7 +67,7 @@
                         <div class="form-group">
                             <laber for="Provincia" class="col-md-2 control-label">Provincia</laber>
                             <div class="col-md-10">
-                                <select id='ProvinciaDistritos' class="form-control">
+                                <select id='ProvinciaDistritos'  class="form-control">
                                     <option value='0'>[Seleccione una provincia...]</option>
 
                                 </select>
