--- a/SistemaTesis/Views/Shared/_Layout.cshtml
+++ b/SistemaTesis/Views/Shared/_Layout.cshtml
@@ -37,9 +37,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración<b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Asentamientos" asp-action="Index">Asentamientos</a></li>
                             <li><a asp-area="" asp-controller="Cantones" asp-action="Index">Cantones</a></li>
                             <li><a asp-area="" asp-controller="Distritos" asp-action="Index">Distritos</a></li>
                             <li><a asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a></li>
+                            <li><a asp-area="" asp-controller="TiposDocumentos" asp-action="Index">Tipos de Documento</a></li>
                             <li><a asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a></li>
                         </ul>
                     </li>
@@ -65,7 +67,9 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/Asentamientos.js" asp-append-version="true"></script>
         <script src="~/js/Provincias.js" asp-append-version="true"></script>
+        <script src="~/js/TiposDocumentos.js" asp-append-version="true"></script>
         <script src="~/js/Cantones.js" asp-append-version="true"></script>
         <script src="~/js/Distritos.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
