--- a/SistemaTesis/Views/Amenazas/Index.cshtml
+++ b/SistemaTesis/Views/Amenazas/Index.cshtml
@@ -18,7 +18,7 @@
     <thead>
         <tr>
             <th>
-                <a href="#" onclick='filtrarAmenazas(1,"descripcion")'>Nombre</a>
+                <a href="#" onclick='filtrarAmenazas(1,"descripcion")'>Descripci&oacute;n</a>
             </th>
             <th>
                 Porcentaje
@@ -38,7 +38,7 @@
 
 </div>
 
-<!--Modal Agregar Provincia-->
+<!--Modal Agregar Amenazas-->
 <div class="modal fade" id="modalAmenazas" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
