--- a/SistemaTesis/Views/Shared/_Layout.cshtml
+++ b/SistemaTesis/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                             <li><a asp-area="" asp-controller="Amenazas" asp-action="Index">Amenazas Naturales</a></li>
                             <li><a asp-area="" asp-controller="Asentamientos" asp-action="Index">Asentamientos</a></li>
                             <li><a asp-area="" asp-controller="Cantones" asp-action="Index">Cantones</a></li>
+                            <li><a asp-area="" asp-controller="CatalogosAmenazas" asp-action="Index">Catalogo de Amenazas Naturales</a></li>
                             <li><a asp-area="" asp-controller="Distritos" asp-action="Index">Distritos</a></li>
                             <li><a asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a></li>
                             <li><a asp-area="" asp-controller="TiposDocumentos" asp-action="Index">Tipos de Documento</a></li>
@@ -74,6 +75,7 @@
         <script src="~/js/TiposDocumentos.js" asp-append-version="true"></script>
         <script src="~/js/Cantones.js" asp-append-version="true"></script>
         <script src="~/js/Distritos.js" asp-append-version="true"></script>
+        <script src="~/js/CatalogosAmenazas.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
