--- a/SistemaTesis/Views/Usuarios/Index.cshtml
+++ b/SistemaTesis/Views/Usuarios/Index.cshtml
@@ -25,7 +25,9 @@
             <th>
                 Tel&eacute;fono
             </th>
-            <th></th>
+            <th>
+                Opciones
+            </th>
         </tr>
     </thead>
     <tbody>
